@@ -1,3 +1,11 @@
+Sun Jan 31 18:39:09 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* nfs.c (xdr_encode_sattr_times): Convert nanoseconds to
+	microseconds correctly.
+
+	* ops.c (netfs_attempt_utimes): Handle new possibility that ATIME
+	or MTIME might be null.
+
 1999-01-22  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* ops.c (netfs_attempt_link): Remove major, minor macro definitions.
